CHANGELOG jdbcmetrics

version  0.9.5
--------------------------


version  0.9.4
--------------------------
* Only log when queries are executed, meaning accessing a page that don't do a database query will not result in any log

version  0.9.3
--------------------------
* Make it possible to use Metrics default MetricRegistry

version	 0.9.2
--------------------------
* Fixed defect when casting the driver

version	 0.9.1
--------------------------
* Introduced the changelog
* Made the MetricsRegistry public availiable

version	 0.9
--------------------------
* Initial release