@@ -2,7 +2,8 @@ CHANGELOG jdbcmetrics
 
 version  0.9.5
 --------------------------
-
+* Fixed defect: The read time was categorised as a JDBC write, that is wrong.
+* Connection pools stats are now categorised as reads or writes.
 
 version  0.9.4
 --------------------------
